; ModuleID = '/home/carl/AnghaBench/git/extr_entry.c_enable_delayed_checkout.c'
source_filename = "/home/carl/AnghaBench/git/extr_entry.c_enable_delayed_checkout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.checkout = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32, i32 }

@CE_CAN_DELAY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @enable_delayed_checkout(%struct.checkout* %0) #0 {
  %2 = alloca %struct.checkout*, align 8
  store %struct.checkout* %0, %struct.checkout** %2, align 8
  %3 = load %struct.checkout*, %struct.checkout** %2, align 8
  %4 = getelementptr inbounds %struct.checkout, %struct.checkout* %3, i32 0, i32 0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = icmp ne %struct.TYPE_2__* %5, null
  br i1 %6, label %26, label %7

7:                                                ; preds = %1
  %8 = call %struct.TYPE_2__* @xmalloc(i32 12)
  %9 = load %struct.checkout*, %struct.checkout** %2, align 8
  %10 = getelementptr inbounds %struct.checkout, %struct.checkout* %9, i32 0, i32 0
  store %struct.TYPE_2__* %8, %struct.TYPE_2__** %10, align 8
  %11 = load i32, i32* @CE_CAN_DELAY, align 4
  %12 = load %struct.checkout*, %struct.checkout** %2, align 8
  %13 = getelementptr inbounds %struct.checkout, %struct.checkout* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 2
  store i32 %11, i32* %15, align 4
  %16 = load %struct.checkout*, %struct.checkout** %2, align 8
  %17 = getelementptr inbounds %struct.checkout, %struct.checkout* %16, i32 0, i32 0
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 1
  %20 = call i32 @string_list_init(i32* %19, i32 0)
  %21 = load %struct.checkout*, %struct.checkout** %2, align 8
  %22 = getelementptr inbounds %struct.checkout, %struct.checkout* %21, i32 0, i32 0
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = call i32 @string_list_init(i32* %24, i32 0)
  br label %26

26:                                               ; preds = %7, %1
  ret void
}

declare dso_local %struct.TYPE_2__* @xmalloc(i32) #1

declare dso_local i32 @string_list_init(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
